--- a/landingpage.html
+++ b/landingpage.html
@@ -8,6 +8,12 @@
     <title> Projekt - Amalie Rosalie </title>
 </head>
 <body>
+    <header>
+        
+    </header>
+    <main>
+
+    </main>
     Hello!
 </body>
 </html>
